created add group page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/profile_pic" />
+        <activity android:name=".activities.CreateGroupActivity" />
 
         <activity
             android:name=".activities.LoginActivity"
