--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/profile_pic" />
         <activity android:name=".activities.CreateGroupActivity" />
-
+        <activity android:name=".activities.GroupExpensesActivity" />
         <activity
             android:name=".activities.LoginActivity"
             android:exported="true">
