--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
+        android:largeHeap="true"
         android:theme="@style/Theme.AndroidProject.NoActionBar"
         tools:targetApi="31">
 
